# test-shogi-hs

./: .editorconfig  .gitignore  .travis.yml  README.md  stack.yaml  test-shogi-hs.cabal
lib-lssp/: lib-lssp.cabal
lib-lssp/LibLSSP/Comps/: Base.hs  Connect.hs  GameCommunicate.hs  RuleConsensus.hs
lib-lssp/LibLSSP/DataFormats/: Json.hs
lib-lssp/LibLSSP/Parsers/: Base.hs  GameCommunicate.hs  GameEnd.hs  GameStart.hs
lib-lssp/LibLSSP/Streams/: Base.hs  Types.hs
lib-shogi/: lib-shogi.cabal
lib-shogi/Data/Shogi/: Board.hs  Koma.hs  StdTypes.hs
lib-shogi/Data/Shogi/Internal/: Board.hs  Koma.hs
lib-shogi/UI/Shogi/: ShogiCUI.hs  ShogiParseUtils.hs
lib-shogi/app/: Main.hs
lib-tests/: lib-tests.cabal
lib-tests/app/: Main.hs
lib-textio/: lib-textio.cabal
lib-textio/app/: Main.hs
lib-textio/src/Data/: TextIO.hs
lib-textio/src/Data/TextIO/: IO.hs  Internal.hs  Network.hs  SubProcess.hs  WebSocket.hs
shogi-server/: shogi-server.cabal
shogi-server/src/: Lib.hs
src/LibLSSP/Comps/: Base.hs  Connect.hs  GameCommunicate.hs  GameEnd.hs  Other.hs  RuleConsensus.hs
src/LibLSSP/DataFormats/: Base.hs  Json.hs
src/LibLSSP/Parsers/: Base.hs  Connect.hs  GameCommunicate.hs  GameEnd.hs  GameStart.hs  RuleConsensus.hs
src/LibLSSP/Senders/: Base.hs  Connect.hs  GameCommunicate.hs  GameEnd.hs  GameStart.hs  RuleConsensus.hs
src/LibLSSP/Streams/: Base.hs  Types.hs
src/LibShogi/Data/: Board.hs  Koma.hs  Shogi.hs  ShogiBoard.hs  ShogiKoma.hs  ShogiStd.hs
src/LibShogiCUI/: ShogiCUI.hs  ShogiParseUtils.hs
src/libshogi/: Board.hs
