name:                test-shogi-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/test-shogi-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Mizunashi Mana
maintainer:          mizunashi_mana@mma.club.uec.ac.jp
copyright:           2015 Mizunashi Mana
category:            Shogi
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibShogi.Data.Board
                     , LibShogi.Data.Koma
                     , LibShogi.Data.Shogi
                     , LibShogi.Data.ShogiBoard
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , record
                     , text
                     , bytestring
                     , async
                     , conduit
                     , conduit-extra
                     , either
                     , exceptions
                     , mtl
                     , void
                     , array
                     , ansi-terminal
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-binds

executable test-shogi-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-shogi-hs
  default-language:    Haskell2010

test-suite test-shogi-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test-shogi-hs
                     , hspec
                     , hlint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/test-shogi-hs
