name:                test-shogi-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/test-shogi-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Mizunashi Mana
maintainer:          mizunashi_mana@mma.club.uec.ac.jp
copyright:           2015 Mizunashi Mana
category:            Shogi
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibShogi.Data.Koma
                     , LibShogi.Data.Board
                     , LibShogi.Data.ShogiKoma
                     , LibShogi.Data.ShogiBoard
                     , LibShogi.Data.ShogiStd
                     , LibShogiCUI.ShogiCUI
                     , LibShogiCUI.ShogiParseUtils
                     , LibLSSP.Comps.Base
                     , LibLSSP.Comps.Connect
                     , LibLSSP.Comps.RuleConsensus
                     , LibLSSP.Comps.GameCommunicate
                     , LibLSSP.Parsers.Base
                     , LibLSSP.Parsers.Connect
                     , LibLSSP.Parsers.RuleConsensus
                     , LibLSSP.Parsers.GameCommunicate
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , text
                     , array
                     , ansi-terminal
                     , containers
                     , attoparsec
                     , aeson
                     , charset
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-binds -fno-warn-unused-do-bind -fno-warn-orphans

executable test-shogi-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-shogi-hs
                     , attoparsec
  default-language:    Haskell2010

test-suite test-shogi-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test-shogi-hs
                     , hspec
                     , hlint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/test-shogi-hs
