name:                lib-lssp
version:             0.1.0.0
synopsis:            lekeplass standard shogi protocol library
description:         Please see README.md
homepage:            http://github.com/githubuser/test-shogi-hs/lib-lssp#readme
license:             MIT
license-file:        LICENSE
author:              Mizunashi Mana
maintainer:          mizunashi_mana@mma.club.uec.ac.jp
copyright:           2015 Mizunashi Mana
category:            Shogi, LSSP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     LibLSSP.Comps.Base
                     , LibLSSP.Comps.Connect
                     , LibLSSP.Comps.RuleConsensus
                     , LibLSSP.Comps.GameCommunicate
                     , LibLSSP.Comps.GameEnd
                     , LibLSSP.Parsers.Base
                     , LibLSSP.Parsers.Connect
                     , LibLSSP.Parsers.RuleConsensus
                     , LibLSSP.Parsers.GameCommunicate
                     , LibLSSP.Parsers.GameEnd
                     , LibLSSP.Senders.Base
                     , LibLSSP.Senders.Connect
                     , LibLSSP.Senders.RuleConsensus
                     , LibLSSP.Senders.GameStart
                     , LibLSSP.Senders.GameCommunicate
                     , LibLSSP.Senders.GameEnd
                     , LibLSSP.DataFormats.Base
                     , LibLSSP.DataFormats.Json
                     , LibLSSP.Streams.Types
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , bytestring
                     , text
                     , text-show
                     , containers
                     , attoparsec
                     , aeson
                     , charset
                     , mtl
                     , conduit
                     , free
                     , void
                     , stm
                     , exceptions
  default-language:    Haskell2010
  -- TODO: write on files
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-unused-binds -fno-warn-unused-do-bind -fno-warn-orphans

executable lib-lssp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lib-lssp
                     , attoparsec
                     , conduit
                     , conduit-extra
  default-language:    Haskell2010

test-suite lib-lssp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lib-lssp
                     , hspec
                     , hlint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/test-shogi-hs
