name:                shogi-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/test-shogi-hs#readme
license:             MIT
license-file:        LICENSE
author:              Mizunashi Mana
maintainer:          mizunashi_mana@mma.club.uec.ac.jp
copyright:           2015 Mizunashi Mana
category:            Shogi
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lib-lssp
                     , lib-shogi
                     , lib-textio
                     , attoparsec
                     , text
                     , text-show
                     , containers
                     , aeson
  default-language:    Haskell2010
  ghc-options:         -Wall

executable shogi-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , shogi-server
  default-language:    Haskell2010

test-suite shogi-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shogi-server
                     , hspec
                     , hlint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/test-shogi-hs
